--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 	<link rel="manifest" href="/site.webmanifest">
-	<link rel="stylesheet" type="text/css" href="style.css?v=230D5B5C-73DC-4040-AE73-53006FEF2766">
+	<link rel="stylesheet" type="text/css" href="style.css?v=DDB4A756-25DC-4374-AF90-57B2FA4AA29B">
 </head>
 
 <body>
 	<div id="ti">
 		<div id="t">
 			<div class="row">
-				<img src="logo.svg" class="logo" alt="">
+				<img src="logo.svg" class="logo logo_b" alt="">
+				<img src="logo_w.svg" class="logo logo_w" style="display: none;" alt="">
 					<div style="flex-grow: 1;">
 						<p id="titol" data-translate="title">Calculadora per rebaixar l'aiguardent</p>
 						<p class="subtitol" data-translate="subtitle">Calcula fàcilment quanta aigua i sucre has d'afegir a la teva ratafia per
@@ -92,8 +93,8 @@
 		<a href="https://ratafia.cat" target="_blank" data-translate="developed_by">Desenvolupat per la Confraria de la Ratafia.</a>
 	</div>
 	<br>
-	<script type="text/javascript" src="i18n.js?v=230D5B5C-73DC-4040-AE73-53006FEF2766"></script>
-	<script type="text/javascript" src="script.js?v=230D5B5C-73DC-4040-AE73-53006FEF2766"></script>
+	<script type="text/javascript" src="i18n.js?v=DDB4A756-25DC-4374-AF90-57B2FA4AA29B"></script>
+	<script type="text/javascript" src="script.js?v=DDB4A756-25DC-4374-AF90-57B2FA4AA29B"></script>
 </body>
 
 </html>
