--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 	<meta name="keywords" content="calculadora, ratafia, aiguardent, rebaixar, confraria, sucre">
 	<meta name="author" content="Aniol Pagès i Xavi Ribas - Confraria de la Ratafia">
 	<title>Calculadora per rebaixar l'aiguardent - Confraria de la Ratafia</title>
-	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
 	<link rel="manifest" href="/site.webmanifest">
 	<link rel="stylesheet" type="text/css" href="style.css?v=DDB4A756-25DC-4374-AF90-57B2FA4AA29B">
 </head>
@@ -19,8 +19,8 @@
 	<div id="ti">
 		<div id="t">
 			<div class="row">
-				<img src="logo.svg" class="logo logo_b" alt="">
-				<img src="logo_w.svg" class="logo logo_w" style="display: none;" alt="">
+				<img src="assets/logo.svg" class="logo logo_b" alt="">
+				<img src="assets/logo_w.svg" class="logo logo_w" style="display: none;" alt="">
 					<div style="flex-grow: 1;">
 						<p id="titol" data-translate="title">Calculadora per rebaixar l'aiguardent</p>
 						<p class="subtitol" data-translate="subtitle">Calcula fàcilment quanta aigua i sucre has d'afegir a la teva ratafia per
@@ -29,6 +29,7 @@
 							graduació desitjada.</p>
 					</div>
 					<div class="language-selector">
+						<img src="assets/translate.svg" alt="Traducció" class="translate-icon">
 						<select id="language-select">
 							<option value="ca">Català</option>
 							<option value="es">Español</option>
