--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 	<br>
 	<script type="text/javascript" src="i18n.js?v=4C486BBC-D22F-4BD5-AC68-151065C856E1"></script>
 	<script type="text/javascript" src="script.js?v=4C486BBC-D22F-4BD5-AC68-151065C856E1"></script>
+	<script defer data-domain="calculadora.ratafia.app" src="https://analitiques.ratafia.app/js/plausible.js"></script>
 </body>
 
 </html>
